# truelayer-challange

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
funtranslations-api/: Cargo.toml
funtranslations-api/src/: lib.rs
pokeapi/: Cargo.toml
pokeapi/src/: lib.rs
pokeapi/src/types/: pokemon.rs
pokedex/: Cargo.toml
pokedex/src/: funtranslations_api.rs  main.rs
pokedex/src/routes/: mod.rs  pokemon.rs
pokedex/test/: integration_test.rs
src/: main.rs
src/pokeapi/: mod.rs
src/pokeapi/types/: mod.rs  pokemon.rs  utility.rs
